What used to be:
http://ibiblio.org/sdelta/patches/ and
http://ibiblio.org/sdelta/sources/  is now
http://ibiblio.org/sdelta/files/patches/
http://ibiblio.org/sdelta/files/sources/, respectively.


Sun Apr 17 05:15:59 UTC 2005	no release	Kyle Sallee
I finished the coding for sdelta 2.
The compressed patch files generated by sdelta 2
can be between 10% and 60% smaller than sdelta.
However there is a 3x increase in time required to make the 
patch and a small less than 1.25x increase in memory usage.
However the sdelta2 patches do apply faster.

Although 10%->60% smaller compressed patch files yields
faster downloads the impact upon overall patch savings
would be between 1% and 5% per patch.
Considering that the sdelta PPR is already running near
95% savings the enhancement could yield only an additional
2% savings at best.

You can make sdelta2 by typing make sdelta2, but you must
manually install it and I have not updated the sd wrapper
to support sdelta 2 archive files yet.


Tue Apr 19 21:19:22 UTC 2005	no release yet	Kyle Sallee
Slightly optimized sdelta2 code,
added support for sdelta2 patch files into the sd wrapper,
wrote SDELTA2_README to explain what it is.


Fri Apr 29 20:48:49 UTC 2005	20050429	Kyle Sallee
Satisfied with the sdelta2 format which is very similar
to sdelta format and also no more bugs apparent in the
linux version of sdelta2 I am making a release.
sdelta2 may still contain bugs that show up in the FreeBSD port.


Sat Apr 30 23:29:26 UTC 2005	no relase yet	Kyle Sallee
Improved blocking code to select additional block 
delimiters only near the presence of NULLs.
This focuses the larger production of blocks 
within the tar meta-data where he additional 
blocking can help increase the amount of matching blocks.
On average still twice as many blocks are produced and 
many more are searchable in sdelta2 than sdelta causing 
a small increase in memory consumption and about twice 
as long to generate a delta file.