@@ -220,8 +220,8 @@ sdelta2 may still contain bugs that show up in the FreeBSD port.
 
 
 Sat Apr 30 23:29:26 UTC 2005	no relase yet	Kyle Sallee
-Improved blocking code to select additional block 
-delimiters only near the presence of NULLs.
+Improved blocking code in sdelta2 to select additional 
+block delimiters only near the presence of NULLs.
 This focuses the larger production of blocks 
 within the tar meta-data where he additional 
 blocking can help increase the amount of matching blocks.
@@ -229,3 +229,10 @@ On average still twice as many blocks are produced and
 many more are searchable in sdelta2 than sdelta causing 
 a small increase in memory consumption and about twice 
 as long to generate a delta file.
+
+
+Mon May  2 00:20:33 UTC 2005	no release yet	Kyle Sallee
+Overhalled the blocking code in sdelta2 to colate
+NULLs into unlimited length blocks by themself.
+This change made sdelta2 generated 
+patches smaller and slower to generate.
